# AICutSplit

./: Cargo.toml  README.md  STATE_OF_THE_ART.md  TODO.md
benches/: benchmark.rs
src/: classifier.rs  lib.rs  linear.rs  packet.rs  rule.rs  simulation.rs
src/cutsplit/: builder.rs  classifier.rs  mod.rs  tree.rs
src/hicuts/: builder.rs  classifier.rs  tree.rs
src/hypersplit/: builder.rs  classifier.rs  mod.rs  tree.rs
src/partitionsort/: classifier.rs  mod.rs  tree.rs
src/tss/: classifier.rs  mod.rs  utils.rs
tests/: correctness.rs
